<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vista.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondologin"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="#d8000000"
        android:gravity="center"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@drawable/logoconcirculo"
            android:layout_marginBottom="50dp"
            />

        <EditText
            android:id="@+id/et_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/input"
            android:hint="@string/correo_electronico"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="#fff"
            android:textColorHint="#ccc" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="#fff"
            android:textColorHint="#ccc" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_rounded"
            android:text="Inciar sesión"
            android:textColor="#fff"
            android:textSize="16sp"
            android:elevation="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_n_no_estas_registrado"
                android:textSize="16sp"
                android:textColor="#fff"
                />
            <Button
                android:id="@+id/btn_registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrate_aqui"
                android:background="@android:color/transparent"
                android:layout_marginLeft="10dp"
                android:textColor="#fff"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

